All rights reserved.

1.1.3
Commands:
* general
	* deprecate -instance in favor of -new
	* command descriptions cleaned up
	* some commands' argument parsing modernized
* individual commands	
	* system modernized
	* db -json
	* IF now tests for null as well as not-true-not-false
	* joblog command added
	* json command added
	* job -hold -release
	* lifo -true -false -null
	* printer -wtrjob
	* printer -get works for all attributes now
	* rs -json
	* string -toascii, -toas400

Miscellaneous:
* Update vim mode
* ubluref.html example for FUNC corrected
* ubluref.html many minor corrections

Examples:
* new
	* joblogstuff.ublu
	* test/testjson.ublu
	* test/testnum.ublu
* updated
	* dbexample.ublu
	* test/testlist.ublu

1.1.2
Changes to commands:
* ~ works -to and -from and with the put command correctly
	  creating anonymous tuples as needed
* const command added
* cs command added
* updates to db command
* file command added
* record command added
* sock command added
* trace command added
* server command now allows execution of a "canned" program rather
	  than simple direct access to the Ublu interpreter.
* multiple server instances now allowed.  
* string -uchar now can take a string of hexvals instead of only one
* removed -from from commandcall and parse arguments better
* programcall works better
* added as400 -setaspgrp -socket -netsocket
* added -byte to num command
* list command supports object arrays and -toarray
* put command wraps non-tuples in anonymous tuple to push to tuple stack
	
New examples:
* dbexample.ublu
* ifsstuff.ublu
* stringpush.ublu
* and some in the examples/test directory

Miscellaneous:
* Deprecate providing system/userid/password as arguments to most
	  commands (use as400 object created by as400 command instead)
* Javadoc cleaned up
* SmapiHelper javadoc cleanup
* Ublu JEdit mode (ublu.xml)
	* Fixed digits problem
	* Added keywords
* More and better documentation
* Made it simpler to add MSSQL support in if user desires it.

1.1.1